# xenolith-installer

./: .gitattributes  .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md
.github/workflows/: build.yml  ci.yml  engine-bundle.yml
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  main.rs
crates/core/: Cargo.toml
crates/core/examples/: ftp_probe.rs  verify_probe.rs
crates/core/locales/: en.ftl  ru.ftl  zh.ftl
crates/core/src/: catalog.rs  dirs.rs  engine_source.rs  extract.rs  hash.rs  i18n.rs  install.rs  key_source.rs  lib.rs  manifest.rs  projects.rs  releases.rs  state.rs  transport.rs  transport_ftp.rs  triple.rs  verify.rs
crates/core/templates/: Makefile.tmpl  launch.json  settings.json
crates/core/templates/src/: ExampleScene.cpp  ExampleScene.h
crates/core/tests/fixtures/: xenolith-release.asc
crates/gui/: Cargo.toml  tauri.conf.json
crates/gui/capabilities/: default.json
crates/gui/icons/: icon.icns
crates/gui/src/: lib.rs  main.rs
docs/: RELEASING.md
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: App.svelte  app.css  main.ts
ui/src/lib/: Projects.svelte  api.ts
