[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/gui",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Xenolith <admin@xenolith.studio>"]
repository = "https://github.com/XenolithEngine/xenolith-installer"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
