[package]
name = "xenolith-installer-cli"
description = "Headless command-line front-end for the Xenolith installer. No GTK/webkit — runs on servers and CI."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "xenolith-installer"
path = "src/main.rs"

[dependencies]
xenolith-installer-core = { path = "../core", features = ["ftp", "keyserver"] }
clap = { version = "4", features = ["derive"] }
thiserror.workspace = true
time = { version = "0.3", features = ["formatting"] }
# Self-update from GitHub releases: picks the asset matching the host target,
# downloads, and replaces the running binary. rustls avoids a system OpenSSL dep.
self_update = { version = "0.42", default-features = false, features = [
    "rustls",
    "archive-tar",
    "compression-flate2",
] }

[dev-dependencies]
tempfile = "3"
