[package]
name = "xenolith-installer-core"
description = "Core logic for the Xenolith Engine installer (platform detection, manifest, download, verify, extract, state). UI-agnostic."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "xenolith_installer_core"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
directories = "5"
sha2 = "0.10"
tar = "0.4"
xz2 = "0.1"
fluent = "0.16"
unic-langid = "0.9"
sys-locale = "0.3"
pgp = "0.14"
suppaftp = { version = "6", optional = true }
ureq = { version = "2", optional = true }

[features]
default = []
# Real blocking FTP transport. Off by default so core unit tests stay
# network-free; the CLI and GUI enable it.
ftp = ["dep:suppaftp"]
# Fetch the release public key from a keyserver over HTTPS.
keyserver = ["dep:ureq"]

[dev-dependencies]
tempfile = "3"
